--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,26 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.487
+head: 1.488
 branch:
 locks: strict
-	gilles: 1.487
+	gilles: 1.488
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 487;	selected revisions: 487
+total revisions: 488;	selected revisions: 488
 description:
 ----------------------------
-revision 1.487	locked by: gilles;
+revision 1.488	locked by: gilles;
+date: 2012/04/15 17:38:21;  author: gilles;  state: Exp;  lines: +8 -8
+Reverse patch applied in 1.485
+It was "2) eval and --delete2foldersonly --delete2foldersbutnot that need also good escaping."
+The "good" escaping was bad. No escaping needed. It permits imapsync variables like ${h2_sep}
+in --delete2foldersonly
+But good escaping has to be done in parameter value like --delete2foldersbutnot /\[Gmail\]/
+instead of --delete2foldersbutnot /[Gmail]/ (for example).
+----------------------------
+revision 1.487
 date: 2012/02/29 05:29:21;  author: gilles;  state: Exp;  lines: +7 -7
 Fixed a useless Perl warning.
 ----------------------------
