--- a/FAQ
+++ b/FAQ
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: FAQ,v 1.104 2012/02/20 18:23:29 gilles Exp gilles $
+# $Id: FAQ,v 1.106 2012/04/15 19:18:29 gilles Exp gilles $
 
 +------------------+
 | FAQ for imapsync |
@@ -43,6 +43,15 @@ like on Unix so in the examples of this FAQ the
 command containing single quotes ' will fail on Windows.
 To fix it just replace single quotes ' by double quotes "
 
+=======================================================================
+Q. How to verify imapsync.exe I got is the right file bit per bit?
+
+R. Use md5sum to check integrity of the file.
+   Get md5sum.exe at http://etree.org/md5com.html
+
+   md5sum imapsync.exe
+
+   Then compare the checksum with the one given by the author.
 
 =======================================================================
 Q. How to install imapsync?
@@ -318,6 +327,12 @@ The result is that you can have more messages on host1 than on host2.
 R2. With option --useuid imapsync doesn't use headers to identify
 messages on both sides but it uses their imap uid. In that case
 duplicates on host1 are transfered on host2.
+
+=======================================================================
+Q. How can I remove duplicates on a uniq host
+
+R. Just run imapsync on the same account with option --delete2,
+   ie with host1 == host2 and user1 == user2
 
 =======================================================================
 Q. I need to log every output on a file named log.txt
