--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.23 2012/01/30 19:23:36 gilles Exp gilles $
+# $Id: INSTALL,v 1.24 2012/04/13 09:14:22 gilles Exp gilles $
 # 
 # INSTALL file for imapsync 
 # imapsync : IMAP sync or copy tool.
@@ -67,19 +67,18 @@ Here is some individual module help:
 
   perl -mMail::IMAPClient -e ''
   
-  Get the Mail::IMAPClient module here:
-  http://search.cpan.org/
-  http://search.cpan.org/~djkernen/
-  http://search.cpan.org/~djkernen/Mail-IMAPClient-2.2.9/
-  
-  In fact I use Mail-IMAPClient-2.2.9 and latest Mail-IMAPClient-2.xx
-  (xx >= 25)
-  To know the version you have on your system try :
+  Get the latest Mail::IMAPClient module here:
+  http://search.cpan.org/dist/Mail-IMAPClient/
+
+  In fact I use both Mail-IMAPClient-2.2.9 and latest Mail-IMAPClient-3.xx
+  (xx >= 25) To know the version you have on your system try :
 
   perl -mMail::IMAPClient -e 'print $Mail::IMAPClient::VERSION, "\n"'
 
-  New Mail-IMAPClient-3.xx works now with imapsync,
-  at least with Mail-IMAPClient-3.25 (previous may bug)
+  New Mail-IMAPClient-3.xx works now very well with imapsync,
+  better than Mail-IMAPClient-2.2.9 with memory and other things,
+  at least with Mail-IMAPClient-3.25 (previous may bug).
+  Don't hesitate to use latest Mail-IMAPClient-3.xx
 
 - Perl Digest::MD5 module. 
   try:
