--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,57 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.488
+head: 1.498
 branch:
 locks: strict
-	gilles: 1.488
+	gilles: 1.498
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 488;	selected revisions: 488
+total revisions: 498;	selected revisions: 498
 description:
 ----------------------------
-revision 1.488	locked by: gilles;
+revision 1.498	locked by: gilles;
+date: 2012/07/20 14:28:45;  author: gilles;  state: Exp;  lines: +22 -6
+Added several connection ckecks like old good imapsync-1.181 to imapsync-1.398
+----------------------------
+revision 1.497
+date: 2012/07/14 19:48:04;  author: gilles;  state: Exp;  lines: +43 -28
+Added --authmech PREAUTH capabiliy. (Patch from David Abrahams).
+----------------------------
+revision 1.496
+date: 2012/07/12 20:53:49;  author: gilles;  state: Exp;  lines: +12 -11
+Bugfix. Unsubsribe folder before deleting it (can bug sometimes).
+----------------------------
+revision 1.495
+date: 2012/07/11 04:56:33;  author: gilles;  state: Exp;  lines: +7 -8
+Bugfix about last patch $h2_total_bytes_duplicate
+----------------------------
+revision 1.494
+date: 2012/07/11 03:50:43;  author: gilles;  state: Exp;  lines: +40 -12
+Usability. Use KiB MiB GiB etc in result summary. Patch from Mark Atwood.
+----------------------------
+revision 1.493
+date: 2012/06/30 00:28:51;  author: gilles;  state: Exp;  lines: +9 -9
+Bug fix. Port 143 when --ssl and --tls together.
+----------------------------
+revision 1.492
+date: 2012/06/29 23:32:04;  author: gilles;  state: Exp;  lines: +7 -7
+Bug fix. Don't filter flag when --nofilterflags is used during the message copy.
+----------------------------
+revision 1.491
+date: 2012/06/20 09:53:27;  author: gilles;  state: Exp;  lines: +8 -8
+Added value of internal date in --debug mode.
+----------------------------
+revision 1.490
+date: 2012/05/22 21:03:40;  author: gilles;  state: Exp;  lines: +10 -14
+Updated Cyrus info.
+----------------------------
+revision 1.489
+date: 2012/05/22 20:54:13;  author: gilles;  state: Exp;  lines: +20 -14
+Print dry mode when expunging.
+----------------------------
+revision 1.488
 date: 2012/04/15 17:38:21;  author: gilles;  state: Exp;  lines: +8 -8
 Reverse patch applied in 1.485
 It was "2) eval and --delete2foldersonly --delete2foldersbutnot that need also good escaping."
