--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.111 2012/04/15 19:18:54 gilles Exp gilles $
+# $Id: TODO,v 1.112 2012/07/19 09:41:54 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -19,6 +19,10 @@ Evaluate
 http://www.rackspace.com/apps/email_hosting/migrations
 http://www.yippiemove.com/
 http://www.migrationwiz.com/
+http://www.microsoft.com/download/en/details.aspx?id=1329 "Microsoft Transporter Suite"
+
+Fix bug found by Pavel Stano on 01/06/2012 (june) imapsync never stop login
+when login fails with a "* BYE Temp error" from server.
 
 Consider /var/tmp/ instead of /tmp (/tmp is destoyed 
 on some Unix at reboot)
@@ -160,6 +164,12 @@ Add cyrus link about INBOX. namespace
 http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 ===========================================================================
+
+DONE. Add a note about 
+"One other thing: You might want to warn idiots like me, that if your
+cache resides on a filesystem with a limited number of inodes such as
+ext4, your inodes will be exhausted really fast (check with df -i). I
+now use a dedicated partition with reiserfs."
 
 DONE. Add an option --exitwhenover 2500000000 to avoid to be banned or locked
 http://support.google.com/a/bin/answer.py?hl=en&answer=1071518
