--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 44 different IMAP server softwares supported with success.
 
-    $Revision: 1.488 $
+    $Revision: 1.498 $
 
 SYNOPSIS
     To synchronise imap account "foo" on "imap.truc.org" to imap account
@@ -314,14 +314,10 @@ IMAP SERVERS
      - Courier IMAP 1.5.1, 2.2.0, 2.1.1, 2.2.1, 3.0.8, 3.0.3, 4.1.1 (GPL) 
        (http://www.courier-mta.org/)
      - Critical Path (7.0.020)
-     - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.1.18 
-       2.2.1, 2.2.2-BETA, 2.2.10, 2.2.12, 
-       v2.2.3-Invoca-RPM-2.2.3-8,
-       2.3-alpha (OSI Approved),
-       v2.2.12-Invoca-RPM-2.2.12-3.RHEL4.1,
-       2.2.13,
-       v2.3.1-Invoca-RPM-2.3.1-2.7.fc5,
-       v2.3.7,
+     - Cyrus IMAP 1.5, 1.6, 
+       2.1, 2.1.15, 2.1.16, 2.1.18 
+       2.2.1, 2.2.2-BETA, 2.2.3, 2.2.6, 2.2.10, 2.2.12, 2.2.13,
+       2.3-alpha (OSI Approved), 2.3.1, 2.3.7, 2.3.16
        (http://asg.web.cmu.edu/cyrus/)
      - David Tobit V8 (proprietary Message system).
      - DBMail 1.2.1, 2.0.4, 2.0.9, 2.2rc1 (GPL) (http://www.dbmail.org/).
@@ -342,7 +338,7 @@ IMAP SERVERS
      - Kerio 7.2.0 Patch 1 [host1] [host2]
      - MailEnable 4.23 [host1] [host2], 4.26 [host1][host2], 5 [host1]
      - MDaemon 7.0.1, 8.0.2, 8.1, 9.5.4 (Windows server 2003 R2 platform), 12 [host2],
-       12.0.3 [host1]
+       12.0.3 [host1], 12.5.5 [host1],
      - Mercury 4.1 (Windows server 2000 platform)
      - Microsoft Exchange Server 5.5, 6.0.6249.0[host1], 6.0.6487.0[host1], 
        6.5.7638.1 [host2], 6.5 [host1], Exchange 2007 SP1 (with Update Rollup 2), 
@@ -444,5 +440,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.488 2012/04/15 17:38:21 gilles Exp gilles $
+    $Id: imapsync,v 1.498 2012/07/20 14:28:45 gilles Exp gilles $
 
