--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,27 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.498
+head: 1.500
 branch:
 locks: strict
-	gilles: 1.498
+	gilles: 1.500
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 498;	selected revisions: 498
+total revisions: 500;	selected revisions: 500
 description:
 ----------------------------
-revision 1.498	locked by: gilles;
+revision 1.500	locked by: gilles;
+date: 2012/08/10 04:58:46;  author: gilles;  state: Exp;  lines: +40 -28
+Bugfix. The cache system didn't work in Win32 (problem with \ transformation)
+Added option --nocheckselectable to fix INBOX issue with Jana-server.
+Documentation. Example for --delete2foldersbutnot
+----------------------------
+revision 1.499
+date: 2012/07/30 10:56:26;  author: gilles;  state: Exp;  lines: +45 -31
+Bugfix. Check the return of touch calls.
+----------------------------
+revision 1.498
 date: 2012/07/20 14:28:45;  author: gilles;  state: Exp;  lines: +22 -6
 Added several connection ckecks like old good imapsync-1.181 to imapsync-1.398
 ----------------------------
